k8sSettings/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: funny
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: jordanleeeee/funny_project:frontend-v0
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: funny
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: react-frontend
