k8sSettings/mongodb.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  namespace: funny
  labels:
    app: mongodb
spec:
  containers:
  - name: mongodb
    image: mongo
    volumeMounts:
      - name: db-data
        mountPath: /data/db
  volumes:
    - name: db-data
      emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: funny
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
