k8sSettings/redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: funny
  labels:
    app: redis
spec:
  containers:
  - name: redis
    image: redis:6.2
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: funny
spec:
  # clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
